# tiktok-ads-mcp

./: README.md  pyproject.toml  requirements.txt
tiktok_ads_mcp/: __init__.py  client.py  config.py  server.py
tiktok_ads_mcp/tools/: get_ad_groups.py  get_ads.py  get_authorized_ad_accounts.py  get_business_centers.py  get_campaigns.py  reports.py
